--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": "./",
     "paths": {
       "@app/*": [ "app/*" ],
-      "@env/*": [ "environments/*" ]
+      "@env/*": [ "./environments/*" ]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
